--- a/templates/index.html
+++ b/templates/index.html
@@ -1,42 +1,48 @@
-<!DOCTYPE html>
-<html lang="en">
-
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN" "http://www.w3.org/TR/REC-html40/loose.dtd">
+<html>
 	<head>
-
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-		<meta name="description" content="">
-		<meta name="author" content="">
-
-		<title>Url Shortner</title>
-
-  <!-- Bootstrap core CSS -->
-		<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="author" content="colorlib.com">
+		<link href="https://fonts.googleapis.com/css?family=Montserrat:500" rel="stylesheet">
+		<link href="static/css-main.css" rel="stylesheet">
 	</head>
-
 		<body>
-		<div class="wr">	
-		<h1>Url Shortner</h1>
-			<div class="search">
-				<form class="search-form" method="POST">
-					<input type="text" placeholder="Url To Short" name="url">
-					<input type="submit" value="Short">
+			<div class="s129">
+				<form method="POST">
+					<div class="inner-form">
+						<div class="input-field">
+							<button class="btn-search" type="button">
+								<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24">
+									<path d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z">
+									</path>
+								</svg>
+							</button>
+							<input id="search" type="text" name="url" placeholder="URL TO SHORT">
+						</div>
+						{% if hasil %}
+							<br>
+							<div style="overflow-x:auto;">
+  								<table>
+									<tr>
+										<th>Result</th>
+									</tr>
+    								<tr>
+      								<td><a href="{{hasil}}">{{hasil}}</a></td>
+      							</tr>
+      						</table>
+							</div>
+						{% endif %}
+					</div>
 				</form>
 			</div>
-			{% if hasil %}
-				{% if 'cutt.ly' in hasil %}
-				<div class="result">
-						<p>Result : </p><a href="{{hasil}}" target="_blank" rel="noopener noreferrer">{{hasil}}</a>
-				</div>
-				{% else %}
-				<div class="result">
-						<p>Result : </p><p>{{hasil}}</p>
-				</div>
-				{% endif %}
-			{% endif %}
-		</div>
 
-</body>
-
+			<script async src="https://www.googletagmanager.com/gtag/js?id=UA-23581568-13"></script><script>
+				window.dataLayer = window.dataLayer || [];
+				function gtag(){dataLayer.push(arguments);}
+					gtag('js', new Date());
+					gtag('config', 'UA-23581568-13');
+			</script>
+	</body>
 </html>
